# zingo-indexer

./: .gitignore  Cargo.toml  LICENSE  README.md  help.html  index.html
docs/: README.md  index.md  internal_spec.md  rpc_api.md  testing.md  use_cases.md
docs/cargo_docs/: .rustc_info.json  settings.html
docs/cargo_docs/doc/: crates.js  search-index.js  src-files.js
docs/cargo_docs/doc/search.desc/zaino_proto/: zaino_proto-desc-0-.js
docs/cargo_docs/doc/search.desc/zaino_serve/: zaino_serve-desc-0-.js
docs/cargo_docs/doc/search.desc/zaino_testutils/: zaino_testutils-desc-0-.js
docs/cargo_docs/doc/search.desc/zainod/: zainod-desc-0-.js
docs/cargo_docs/doc/search.desc/zainodlib/: zainodlib-desc-0-.js
docs/cargo_docs/doc/src/zaino_fetch/: lib.rs.html
docs/cargo_docs/doc/src/zaino_proto/: proto.rs.html
docs/cargo_docs/doc/src/zaino_serve/: rpc.rs.html  server.rs.html
docs/cargo_docs/doc/zaino_fetch/: sidebar-items.js
docs/cargo_docs/doc/zaino_proto/: all.html
docs/cargo_docs/doc/zaino_serve/: all.html
docs/cargo_docs/doc/zaino_state/: index.html
docs/cargo_docs/doc/zaino_testutils/: all.html  index.html  sidebar-items.js  struct.TestManager.html
docs/cargo_docs/doc/zainod/: fn.main.html  struct.Args.html
docs/cargo_docs/doc/zainodlib/: all.html
docs/cargo_docs/search.desc/zaino_state/: zaino_state-desc-0-.js
docs/cargo_docs/src/zaino_proto/: lib.rs.html
docs/cargo_docs/src/zaino_serve/: lib.rs.html  utils.rs.html
docs/cargo_docs/src/zainod/: main.rs.html
docs/cargo_docs/zaino_fetch/: all.html  index.html
docs/cargo_docs/zaino_fetch/chain/: sidebar-items.js
docs/cargo_docs/zaino_fetch/jsonrpc/: sidebar-items.js
docs/cargo_docs/zaino_proto/: index.html
docs/cargo_docs/zaino_serve/: index.html
docs/cargo_docs/zaino_serve/rpc/: struct.GrpcClient.html
docs/cargo_docs/zaino_serve/server/: struct.AtomicStatus.html
docs/cargo_docs/zaino_state/: all.html
docs/cargo_docs/zaino_testutils/: fn.drop_test_manager.html
docs/cargo_docs/zaino_testutils/zingo_lightclient/: fn.get_address.html
docs/cargo_docs/zainodlib/: index.html  sidebar-items.js
docs/cargo_docs/zainodlib/config/: index.html
docs/cargo_docs/zainodlib/error/: enum.IndexerError.html
docs/cargo_docs/zainodlib/indexer/: sidebar-items.js  struct.Indexer.html  struct.IndexerStatus.html
integration-tests/: Cargo.toml
integration-tests/tests/: client_rpcs.rs  integrations.rs  wallet_to_validator.rs
search.desc/zaino_fetch/: zaino_fetch-desc-0-.js
src/zaino_fetch/: chain.rs.html  jsonrpc.rs.html
src/zaino_fetch/chain/: block.rs.html  error.rs.html
src/zaino_fetch/jsonrpc/: connector.rs.html
src/zaino_serve/rpc/: service.rs.html
src/zainodlib/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.Into.js  trait.TryFrom.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/futures_core/stream/: trait.Stream.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/tower_service/: trait.Service.js
utils/: generate_chain_caches.sh
zaino-fetch/: Cargo.toml
zaino-fetch/src/: chain.rs
zaino-fetch/src/chain/: block.rs  error.rs  mempool.rs  transaction.rs  utils.rs
zaino-fetch/src/jsonrpc/: connector.rs  error.rs  response.rs
zaino-proto/: Cargo.toml
zaino-proto/src/proto/: service.rs
zaino-serve/: Cargo.toml
zaino-serve/src/: lib.rs  rpc.rs  server.rs
zaino-serve/src/rpc/: service.rs
zaino-serve/src/server/: config.rs  director.rs  error.rs  grpc.rs  ingestor.rs  queue.rs  request.rs  worker.rs
zaino-state/: Cargo.toml
zaino-state/src/: broadcast.rs  config.rs  error.rs  fetch.rs  indexer.rs  lib.rs  local_cache.rs  mempool.rs  state.rs  status.rs  stream.rs  utils.rs
zaino-state/src/local_cache/: finalised_state.rs  non_finalised_state.rs
zaino-testutils/: Cargo.toml
zaino-testutils/src/: lib.rs  test_fixtures.rs
zaino_fetch/chain/block/: fn.get_block_from_node.html  fn.get_nullifiers_from_node.html  index.html  struct.FullBlock.html
zaino_fetch/chain/error/: sidebar-items.js
zaino_fetch/chain/transaction/: struct.Action.html  struct.JoinSplit.html  struct.Spend.html  struct.TxOut.html
zaino_fetch/chain/utils/: fn.read_u64.html  fn.read_zcash_script_i64.html  index.html
zaino_fetch/jsonrpc/: index.html
zaino_fetch/jsonrpc/connector/: struct.JsonRpcConnector.html
zaino_fetch/jsonrpc/response/: index.html  struct.GetBlockchainInfoResponse.html  struct.GetTreestateResponse.html  struct.GetUtxosResponse.html  struct.Script.html  struct.TxidsResponse.html
zaino_proto/proto/: index.html
zaino_proto/proto/compact_formats/: struct.ChainMetadata.html  struct.CompactOrchardAction.html  struct.CompactTx.html
zaino_proto/proto/proposal/: struct.MemoBytes.html  struct.PriorStepChange.html  struct.PriorStepOutput.html  struct.ReceivedOutput.html
zaino_proto/proto/service/: struct.Address.html  struct.Balance.html  struct.LightdInfo.html  struct.PingResponse.html  struct.RawTransaction.html
zaino_proto/proto/service/compact_tx_streamer_client/: struct.CompactTxStreamerClient.html
zaino_proto/proto/service/compact_tx_streamer_server/: struct.CompactTxStreamerServer.html
zaino_serve/: sidebar-items.js
zaino_serve/rpc/service/: sidebar-items.js  struct.CompactTransactionStream.html  struct.RawTransactionStream.html  struct.SubtreeRootReplyStream.html
zaino_serve/server/error/: enum.QueueError.html  enum.RequestError.html  enum.WorkerError.html  index.html
zaino_serve/server/request/: sidebar-items.js  struct.TcpRequest.html  struct.TcpServerRequest.html
zaino_testutils/zingo_lightclient/: sidebar-items.js
zainod/: Cargo.toml  all.html  index.html  zebrad.toml  zindexer.toml
zainod/src/: config.rs  error.rs  indexer.rs  main.rs
zainodlib/config/: sidebar-items.js  struct.IndexerConfig.html
zainodlib/error/: enum.IndexerError.html
zainodlib/indexer/: struct.Indexer.html
(+150 files in other folders)
