# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "integration-tests",
    "zaino-testutils",
    "zainod",
    "zaino-serve",
    "zaino-state",
    "zaino-fetch",
    "zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"
version = "0.1.1"


[workspace.dependencies]
# Zingolabs
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_004", features = [ "test-elevation" ] }

# Librustzcash
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [ "lightwalletd-tonic" ] }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }


# Zebra
zebra-chain = { git = "https://github.com/idky137/zebra.git", branch = "add_public_func_for_zaino_pt2" }
zebra-state = { git = "https://github.com/idky137/zebra.git", branch = "add_public_func_for_zaino_pt2" }
zebra-rpc = { git = "https://github.com/idky137/zebra.git", branch = "add_public_func_for_zaino_pt2" }

# Zcash-Local-Net
zcash_local_net = { git = "https://github.com/zingolabs/zcash-local-net.git", rev = "d64b76cab748455c5b9e1e4412f1689fb66f7d41", features = [ "test_fixtures" ] }

# Miscellaneous
tokio = { version = "1.38", features = ["full"] }
tonic = "0.12"
http = "1.1"
thiserror = "1.0"
async-stream = "0.3"
base64 = "0.22"
byteorder = "1.5"
clap = "4.0"
crossbeam-channel = "0.5"
ctrlc = "3.4"
futures = "0.3.30"
hex = "0.4.3"
indexmap = "2.2.6"
lazy-regex = "3.3"
once_cell = "1.20.2"
portpicker = "0.1"
prost = "0.13"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.2"
tokio-stream = "0.1"
toml = "0.5"
tonic-build = "0.12"
tracing-subscriber = "0.3.15"
url = "2.5"
which = "4"
whoami = "1.5"
tower = { version = "0.4", features = ["buffer", "util"] }
async-trait = "0.1"
chrono = "0.4"
jsonrpc-core = "18.0.0"
dashmap = "6.1"
