# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "integration-tests",
    "zaino-testutils",
    "zainod",
    "zaino-serve",
    "zaino-state",
    "zaino-fetch",
    "zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"
version = "0.1.1"


[workspace.dependencies]
# Zingolabs
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_004", features = [ "test-elevation" ] }

# Librustzcash
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [ "lightwalletd-tonic" ] }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }


# Zebra
# This should be changed to a specific release tag once Zebra regtest stabalizes, currently main is used to fetch most recent bug fixes from Zebra.
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", branch = "main" }
zebra-state = { git = "https://github.com/ZcashFoundation/zebra.git", branch = "main" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", branch = "main" }


# Zingo-infra-testutils
zingo-infra-testutils = { git = "https://github.com/zingolabs/infrastructure.git" }
zingo-infra-services = { git = "https://github.com/zingolabs/infrastructure.git" }

# Runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = "4.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time"] }
tracing-futures = "0.2"

# Network / RPC
http = "1.1"
url = "2.5"
reqwest = "0.12"
tower = { version = "0.4", features = ["buffer", "util"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
serde = "1.0"
serde_json = "1.0"
jsonrpc-core = "18.0"
jsonrpsee-types = "0.24"

# Hashmaps, channels, DBs
indexmap = "2.2.6"
crossbeam-channel = "0.5"
dashmap = "6.1"
lmdb = "0.8"

# Async
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3.30"

# Utility
thiserror = "1.0"
lazy-regex = "3.3"
once_cell = "1.20"
ctrlc = "3.4"
chrono = "0.4"
which = "4"
whoami = "1.5"

# Formats
base64 = "0.22"
byteorder = "1.5"
sha2 = "0.10"
hex = "0.4"
toml = "0.5"

# Test
portpicker = "0.1"
tempfile = "3.2"

[profile.test]
opt-level = 3
debug = true
