[package]
name = "integration-tests"
version = "0.1.0"
description = "Crate containing Zaino 'Wallet-to-Node' tests."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Test utility
zaino-testutils = { path = "../zaino-testutils" }

# Test fixtures
zcash_local_net = { workspace = true, features = ["test_fixtures"] }

# Lightclient
zingolib = { workspace = true }

# Runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Lazy
once_cell = { workspace = true }
