[package]
name = "integration-tests"
description = "Crate containing Zaino's integration-tests."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Test utility
zaino-testutils = { path = "../zaino-testutils" }
zaino-fetch = { path = "../zaino-fetch" }

# Test fixtures
zcash_local_net = { workspace = true, features = ["test_fixtures"] }

# Lightclient
zingolib = { workspace = true }

# Runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Url
url = { workspace = true }
