[package]
name = "integration-tests"
description = "Crate containing Zaino's integration-tests."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Test utility
zaino-testutils = { path = "../zaino-testutils" }
zaino-fetch = { path = "../zaino-fetch" }

# Test fixtures
zingo-infra-testutils = { workspace = true }

# Lightclient
zingolib = { workspace = true }

# Runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Url
url = { workspace = true }
