[package]
name = "zaino-fetch"
description = "A mempool-fetching, chain-fetching and transaction submission service that uses zebra's RPC interface."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
zaino-proto = { path = "../zaino-proto" }

# Librustzcash
zcash_protocol = { workspace = true }

# Zebra
zebra-chain = { workspace = true }
zebra-rpc = { workspace = true }
zebra-state = { workspace = true }

# Tracing
tracing = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
byteorder = { workspace = true }
sha2 = { workspace = true }
jsonrpsee-types = { workspace = true }

