[package]
name = "zaino-proto"
version = "0.1.1"
description = "Holds tonic files and build logic for the lightwallet and darkside RPCs."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Miscellaneous Workspace
tonic = { workspace = true }

# Miscellaneous Crate
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
which = { workspace = true }
