[package]
name = "zaino-proto"
description = "Holds tonic files and build logic for the lightwallet and darkside RPCs."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Miscellaneous Workspace
tonic = { workspace = true }

# Miscellaneous Crate
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
which = { workspace = true }
