[package]
name = "zaino-serve"
version = "0.1.1"
description = "Crate containing Zingo's gRPC server implementation."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
zaino-proto = { path = "../zaino-proto" }
zaino-fetch = { path = "../zaino-fetch" }

# Zebra
zebra-chain = { workspace = true }
zebra-rpc = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = "0.13"
hex = { version = "0.4.3", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3.30"
async-stream = "0.3"
crossbeam-channel = "0.5"
lazy-regex = "3.3"

[build-dependencies]
whoami = "1.5"
