[package]
name = "zaino-serve"
description = "Crate containing Zingo's gRPC server implementation."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
zaino-proto = { path = "../zaino-proto" }
zaino-fetch = { path = "../zaino-fetch" }
zaino-state = { path = "../zaino-state" }

# Zebra
zebra-chain = { workspace = true }
zebra-rpc = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = { workspace = true }
hex = { workspace = true, features = ["serde"] }
futures = { workspace = true }
async-stream = { workspace = true }
crossbeam-channel = { workspace = true }
lazy-regex = { workspace = true }

[build-dependencies]
whoami = { workspace = true }
