[package]
name = "zaino-state"
description = "A mempool and chain-fetching service built on top of zebra's ReadStateService and TrustedChainSync."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Zebra
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }


# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower = { workspace = true, features = ["buffer", "util"] }
async-trait = { workspace = true }

[build-dependencies]
whoami = { workspace = true }
