[package]
name = "zaino-state"
description = "A mempool and chain-fetching service built on top of zebra's ReadStateService and TrustedChainSync."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
zaino-fetch = { path = "../zaino-fetch" }

# Zebra
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower = { workspace = true, features = ["buffer", "util"] }
async-trait = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
hex = { workspace = true, features = ["serde"] }
jsonrpc-core = { workspace = true }


[dev-dependencies]
zaino-testutils = { path = "../zaino-testutils" }

# Test Utilities
zcash_local_net = { workspace = true, features = ["test_fixtures"] }


[build-dependencies]
whoami = { workspace = true }
