[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zainod = { path = "../zainod" }

# Librustzcash
zcash_protocol = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_primitives = { workspace = true }

# Zebra
zebra-chain = { workspace = true }

# ZingoLib
zingolib = { workspace = true }

# Test Utilities
zcash_local_net = { workspace = true, features = [ "client" ] }

# Miscellaneous
tokio = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
once_cell = { workspace = true }
tokio-stream.workspace = true

