[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
# Used by zcash-local-net:
test_fixtures = []

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zainod = { path = "../zainod" }

# Librustzcash
zcash_protocol = { workspace = true }
zcash_client_backend = { workspace = true }

# Zebra
zebra-chain = { workspace = true }

# ZingoLib
zingolib = { workspace = true }

# Test Utilities
zcash_local_net = { workspace = true, features = ["test_fixtures"] }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "time"] }
tracing-futures = { workspace = true }

# Miscellaneous
tokio = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
ctrlc = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
once_cell = { workspace = true }

