[package]
name = "zainod"
version = "0.1.1"
description = "Crate containing the Zaino Indexer binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zainod"
path = "src/main.rs"

[lib]
name = "zainodlib"
path = "src/lib.rs"

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zaino-serve = { path = "../zaino-serve" }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
