[package]
name = "zainod"
description = "Crate containing the Zaino Indexer binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zainod"
path = "src/main.rs"

[lib]
name = "zainodlib"
path = "src/lib.rs"

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zaino-serve = { path = "../zaino-serve" }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
serde = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
