[package]
name = "zainod"
description = "Crate containing the Zaino Indexer binary."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[[bin]]
name = "zainod"
path = "src/main.rs"

[lib]
name = "zainodlib"
path = "src/lib.rs"

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zaino-state = { path = "../zaino-state" }
zaino-serve = { path = "../zaino-serve" }

# Zebra
zebra-chain = { workspace = true }

# Runtime
tokio = { workspace = true, features = ["full"] }

# CLI
clap = { workspace = true, features = ["derive"] }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "time"] }
tracing-futures = { workspace = true }

# Network / RPC
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }


# Utility
thiserror = { workspace = true }
ctrlc = { workspace = true }

# Formats
toml = { workspace = true }
